Added random field to GET words endpoint
